fix: text-align in home cards

--- a/react/src/routes/Home.module.css
+++ b/react/src/routes/Home.module.css
@@ -16,3 +16,7 @@
 .logo img {
   height: 100px;
 }
+
+.card {
+  text-align: left;
+}
